[gd_scene load_steps=3 format=3 uid="uid://bbd0ufauw77vg"]

[ext_resource type="Script" uid="uid://jprgtsx0lhk7" path="res://player/grenade/grenade.gd" id="1_o8rsb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pn3ch"]
radius = 0.16

[node name="Grenade" type="RigidBody3D"]
collision_layer = 0
collision_mask = 3
continuous_cd = true
linear_damp = 0.1
angular_damp = 5.0
script = ExtResource("1_o8rsb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_pn3ch")

[node name="SelfDestructTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionDamageArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionDamageArea"]

[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
